<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/hello"
        android:text="@string/hello"
        style="@style/Theme.ProectOne.HeadText"
        android:layout_marginTop="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="Welcome to my first project!"

        android:layout_marginTop="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hello" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/next_activity_button"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints" >

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:checked="true"
            android:text="@string/label_1" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_2"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_3"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/label_4"/>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:text="@string/label_5" />

    </androidx.appcompat.widget.LinearLayoutCompat>



    <Button
        android:text="@string/next_activity"
        android:id="@+id/next_activity_button"
        style="@style/Theme.ProectOne.ColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginEnd="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:text="@string/back_activity"
        android:id="@+id/back_activity_button"
        style="@style/Theme.ProectOne.ColorButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40sp"
        android:layout_marginStart="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>